ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oc-ingress
  namespace: or15
spec:
  rules:
    - host: owncloudpj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud-service
                port:
                  number: 8080
